<resources>
    <string name="app_name">UmuClone</string>
    <string name="text_umu">UMU</string>
    <string name="text_welcome_image">welcome_image</string>
    <string name="text_welcome_heading">welcome_heading</string>
    <string name="text_welcome_desc">welcome_desc</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_lupa_password">Lupa Password?</string>
    <string name="text_belum_punya_aku_daftar">Belum punya aku? Daftar</string>
    <string name="text_ingat_saya">Ingat saya</string>
    <string name="text_example_mail_com">example@mail.com</string>
    <string name="text_login_an_account">Login an account</string>
    <string name="text_login">Login</string>
    <string name="text_hint_password">Password</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_hint_example_mail_com">example@mail.com</string>
    <string name="text_register_an_account">Register an account</string>
    <string name="text_register">REGISTER</string>
    <string name="text_sudah_punya_akun_masuk">Sudah punya akun? Masuk</string>
    <string name="text_hint_jhonlenon">JhonLenon</string>
    <string name="text_username">Username</string>
    <string name="text_highlight">Highlight</string>
    <string name="text_name_user">My Account</string>
</resources>
