<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/logo_umu_orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp"
                app:layout_constraintTop_toBottomOf="@id/imageView">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView_title_login_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:text="@string/text_login_an_account"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_title_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:layout_marginTop="@dimen/dimen_16dp"
                        android:text="@string/text_email"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView_title_login_card" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_email">

                        <EditText
                            android:id="@+id/editText_email_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/text_hint_example_mail_com"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:maxLines="1"
                            android:textColor="@color/colorPrimary"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="214dp"
                            tools:ignore="Autofill" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/text_title_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_password"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textInputLayout7" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_password"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/editText_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/text_password"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLines="1"
                            android:textColor="@color/colorPrimary"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteY="262dp"
                            tools:ignore="Autofill" />

                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:id="@+id/ckRemember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/text_ingat_saya"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                    <TextView
                        android:id="@+id/btnLupaPin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text_lupa_password"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/ckRemember"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ckRemember" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_umu_primary_style"
                android:minHeight="40dp"
                android:text="@string/text_login"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:padding="@dimen/dimen_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_login"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/btn_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:elevation="8dp"
                android:text="@string/text_belum_punya_aku_daftar"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnNext"
                tools:ignore="KeyboardInaccessibleWidget" />

        </android.support.constraint.ConstraintLayout>


    </FrameLayout>

</ScrollView>